--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,10 @@
 @import "tailwindcss";
 
-
+:root {
+  --font-rethink-sans: 'Rethink Sans', sans-serif;
+}
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-rethink-sans);
 }
